# snake

./: .gitignore  README.md
src/: .gitignore  main.s
tools/as/: .gitignore  Makefile  backend.c  backend.h  dmalloc.c  file.c  getopt.c  gram.c  gram.h  gram.y  hashsize.h  lexer.c  lexer.l  macro.c  main.c  sieve.c  smach.c  smach.h  storage.c  symbol.c  taz.h
tools/vmu/: Makefile.dc  Makefile.in  Makefile.os4  amiga_main.c  amiga_mainwin.c  config.cache  config.status  configure  configure.in  cpu.c  dc_main.c  dc_mainwin.c  dmakefile  dos_main.c  dos_mainwin.c  getopt.c  lcdimg.c  main.c  mainwin.c  nsplugin.c  prototypes.h  smakefile  version.h  vmu.5.xpm  vmu.xpm  win32_main.c  win32_mainwin.c
